增加go template demo

--- a/gin_demo/templates/index/index.html
+++ b/gin_demo/templates/index/index.html
@@ -1,9 +1,9 @@
 {{ define "index/index"}}
-    {{ template "header" . }}
+{{/*    {{ template "header" . }}*/}}
     <body>
     <div>
         hello, name --> {{ .Name }}, age --> {{ .Age }}
     </div>
     </body>
-    {{ template "footer" . }}
+{{/*    {{ template "footer" . }}*/}}
 {{end}}
